# mac-app-frontmost

./: README.md  package.json  setup.cfg  setup.py
scripts/: app-frontmost
tests/mac-app-frontmost/examples/: app-frontmost.sh
